Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.2
-
None
-
win32/msvc2012/qt5.0.2 tag from gitorious
-
b7f7edfae4d5dc7e7547c3377c73129a9c6fdae0
Description
Both jom and nmake fail:
NMAKE : fatal error U1073: don't know how to make 'debug'
Stop.
Error: Target distclean doesn't exist.
etc.
cd examples\ && ( if not exist Makefile C:\Depot\qt-5.0.2-win32-msvc2012\qtbase\bin\qmake C:\Depot\qt5\qtbase\examples\examples.pro -o Makefile ) && C:\QtSDK\QtCreator\bin\jom.exe -f Makefile distclean cd dbus\ && ( if not exist Makefile C:\Depot\qt-5.0.2-win32-msvc2012\qtbase\bin\qmake C:\Depot\qt5\qtbase\examples\dbus\dbus.pro -o Makefile ) && C:\QtSDK\QtCreator\bin\jom.exe -f Makefile distclean
Attachments
Issue Links
- is required for
-
QTQAINFRA-717 Running testplanner fails in Mingw 4.8 build
- Closed
For Gerrit Dashboard: QTBUG-30644 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
62736,3 | de-duplicate code for writing dummy makefiles | stable | qt/qtbase | Status: MERGED | +2 | 0 |